crates/agent/src/integration_tests/snapshots/agent__integration_tests__user_discovers__graphql_discover_connector_failure.snap
---
source: crates/agent/src/integration_tests/user_discovers.rs
expression: failed_lookup
---
{
  "discover": {
    "errors": [
      {
        "detail": "connector unavailable"
      }
    ],
    "status": "DISCOVER_FAILED"
  }
}
