crates/agent/src/integration_tests/snapshots/agent__integration_tests__user_discovers__graphql_discover_error_cleared_by_retry.snap
---
source: crates/agent/src/integration_tests/user_discovers.rs
expression: earlier
---
{
  "discover": {
    "errors": [],
    "status": "DISCOVER_FAILED"
  }
}
